Hompage HTML webpack move

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,10 +4,233 @@
 @import "modules/hello.scss";
 
 body {
-  background: $wtf;
-  color: #fff;
+  background-color: #42cd4d;
+  background-image: linear-gradient(315deg, #42cd4d 61%, #ffe32c 100%);
+  background-size: contain;
+  color: honeydew;
+  font-size: 20px;
+  margin: auto;
+  padding-bottom: 20px;
+  width: 90%;
+}
+a {
+  text-decoration-line: none;
+}
+.footer {
+  background-color: rgba(59, 49, 119, 0.5);
+  border-radius: 15px;
+  color: #f0a202;
+  margin: 20px auto 0;
+  text-align: center;
+  width: 90%;
+  font-size: 25px;
+  bottom: 0px;
+  position: fixed;
+  z-index: 1000;
+  &__link {
+    text-align: right;
+  }
+}
+.global__header {
   display: flex;
-  align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  font-size: 45px;
+  color: orange;
+  margin-top: 20px;
+  &::after {
+    content: "!!!!";
+    color: red;
+  }
+  &::before {
+    content: "!!!!";
+    color: red;
+  }
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 10px;
+  border-radius: 30px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  &__header {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 25px;
+    color: green;
+    text-align: center;
+    background-color: rgb(154, 205, 50);
+    border-radius: 30px;
+  }
+  &__section {
+    display: block;
+    background-color: yellow;
+    border-radius: 15px;
+    &__foto {
+      height: 80%;
+      width: 80px;
+      border-radius: 10%;
+      float: left;
+      margin-left: 5px;
+    }
+  }
+}
+
+.hamburger {
+  display: none;
+}
+main {
+  /* max-width: 1000px; */
+  margin: 60 px auto 0;
+}
+.navigation {
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: rgba(59, 49, 119, 0.5);
+  border-radius: 20px;
+  top: 0;
+  z-index: 1000;
+  font-size: 20px;
+  width: 90%;
+  &__link {
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    /* padding-right: 60px; */
+    text-decoration-line: none;
+  }
+  &__link:hover {
+    box-sizing: border-box;
+    border: crimson;
+    border: 3px;
+    border-style: solid;
+  }
+}
+.section {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  background-color: greenyellow;
+  font-size: 30px;
+  color: black;
+  clear: both;
+  z-index: 900;
+  &__gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  &__header {
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    color: green;
+    text-decoration-line: none;
+  }
+  &__nextToFoto {
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 30px;
+    background-color: greenyellow;
+    font-size: 30px;
+    color: black;
+    z-index: 900;
+    max-width: 100%;
+  }
+  &__text {
+    text-align: center;
+    color: rgb(28, 26, 189);
+    font-size: 20px;
+    margin-top: 0em;
+  }
+  &__foto {
+    display: flex;
+    flex-wrap: wrap;
+    max-height: 250px;
+    max-width: 250px;
+    border-radius: 50%;
+    margin: 10px;
+  }
+  &__link {
+    color: rgb(55, 149, 212);
+    text-decoration-line: none;
+    font-size: 20px;
+  }
+}
+
+.section__foto:hover {
+  border: 5px;
+  border-style: solid;
+  border-color: rgba(0, 0, 255, 0.7);
+  box-sizing: border-box;
+}
+.list {
+  margin-top: 0em;
+  color: rgb(55, 149, 212);
+  text-decoration-line: none;
+  font-size: 20px;
+}
+@media screen and (max-width: 768px) {
+  .global__header {
+    font-size: 25px;
+    margin-top: 60px;
+  }
+  .hamburger {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 10px;
+  }
+  .section {
+    &__nextToFoto {
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    &__foto {
+      width: 90%;
+    }
+  }
+  .footer {
+    font-size: 15px;
+  }
+  .navigation {
+    position: relative;
+    display: none;
+    height: 60px;
+    top: 0;
+    z-index: 1000;
+    font-size: 15px;
+    background: none;
+    &__link {
+      color: white;
+      display: flex;
+      font-weight: bold;
+      padding-right: 60px;
+      text-decoration-line: none;
+      text-align: center;
+      display: block;
+      margin: 0 0 5px;
+    }
+    &--open {
+      padding: 15px;
+      width: 0;
+      display: block;
+    }
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    &__header {
+      grid-column-start: 1;
+      grid-column-end: 2;
+    }
+  }
 }
