--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,11 @@ body {
 a {
   text-decoration-line: none;
 }
+.clock {
+  display: inline-block;
+  color: red;
+  margin: 0;
+}
 .footer {
   background-color: rgba(59, 49, 119, 0.5);
   border-radius: 15px;
@@ -154,10 +159,22 @@ main {
   &__foto {
     display: flex;
     flex-wrap: wrap;
-    max-height: 250px;
+    justify-content: center;
+    height: 250px;
     max-width: 250px;
     border-radius: 50%;
     margin: 10px;
+    &--bike {
+      width: 80%;
+      border-radius: 50px;
+      margin: auto;
+      &:hover {
+        border: 5px;
+        border-style: solid;
+        border-color: rgba(0, 0, 255, 0.7);
+        box-sizing: border-box;
+      }
+    }
   }
   &__link {
     color: rgb(55, 149, 212);
