--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,8 @@
 @import "modules/hello.scss";
 
 body {
-  background-color: #42cd4d;
-  background-image: linear-gradient(315deg, #42cd4d 61%, #ffe32c 100%);
+  background-color: #2cabdd;
+  // background-image: linear-gradient(315deg, #42cd4d 61%, #ffe32c 100%);
   background-size: contain;
   color: honeydew;
   font-size: 20px;
