--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 
 body {
   background-color: #2cabdd;
-  // background-image: linear-gradient(315deg, #42cd4d 61%, #ffe32c 100%);
+  background-image: linear-gradient(315deg, #42cd4d 61%, #ffe32c 100%);
   background-size: contain;
   color: honeydew;
   font-size: 20px;
